# ioguard

./: .gitignore  .gitleaksignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  deny.toml  lefthook.yml
.ckeletin/: CHANGELOG.md  Justfile
.ckeletin/conform/: Cargo.toml
.ckeletin/crate/: Cargo.toml
.ckeletin/crate/src/: config.rs  lib.rs  logging.rs  output.rs  process.rs
.ckeletin/crate/tests/: conform_guard.rs  doctor.rs  framework_purity.rs  init_smoke.rs  logging_init.rs  update_guard.rs
.ckeletin/scripts/: init.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  spec-drift.yml
corpus/must-allow/: accented-latin.txt  benign-work-live-identifiers.txt  bitshift-falcon-markers.txt  cjk-text.txt  emoji-pirate-flag.txt  emoji-skin-tone-zwj.txt  emoji-vs-presentation.txt  emoji-zwj.txt  fullwidth-the.txt  git-sha.txt  greek-beta-test.txt  greek-delta-x.txt  greek-scientific-notation.txt  greek-words.txt  imei-15-digit.txt  keycap-emoji.txt  lowercase-bracket-subscripts.txt  mastercard-test-card.txt  math-inequality-spaced-s.txt  math-symbols.txt  non-pan-13-digit.txt  prose-assistant-mention.txt  prose-double-angle-brackets.txt  prose.txt  rtl-text-with-locale.txt  small-cap-hello.txt  stripe-test-card.txt  subdivision-flag-emoji.txt
corpus/must-block/: bidi-spoofed.txt  case-flip-chatml.txt  chatml-injection.txt  cohere-injection.txt  falcon-instruct-injection.txt  fim-token-injection.txt  fullwidth-chatml.txt  gemini-injection.txt  homoglyph-emoji-suffix-spoof.txt  homoglyph-fullwidth-account.txt  homoglyph-fullwidth-amazon.txt  homoglyph-fullwidth-google.txt  homoglyph-fullwidth-login.txt  homoglyph-fullwidth-microsoft.txt  homoglyph-fullwidth-paypal.txt  homoglyph-fullwidth-secure.txt  homoglyph-fullwidth-signin.txt  homoglyph-fullwidth-token.txt  homoglyph-fullwidth-verify.txt  homoglyph-lookalike.txt  (+28 more)
crates/ioguard-cli/: Cargo.toml
crates/ioguard-cli/src/: main.rs
crates/ioguard-cli/tests/: cli.rs
crates/ioguard-core/: Cargo.toml
crates/ioguard-core/src/: lib.rs  pipeline.rs  ruleset.rs  types.rs
crates/ioguard-core/src/detectors/: bidi.rs  homoglyph.rs  luhn.rs  mod.rs  secret.rs  special_token.rs  unicode_tags.rs  zero_width.rs
crates/ioguard-core/tests/: corpus.rs
crates/ioguard-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ioguard-ffi/src/: lib.rs
crates/ioguard-ffi/tests/: ffi_smoke.rs
include/: ioguard.h
rules/: bidi.toml  homoglyph.toml  secret.toml  special_token.toml  unicode_tags.toml  zero_width.toml
(+1 files in other folders)
