[workspace]
members = ["crates/*", ".ckeletin/crate"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/peiman/ioguard"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "2"
toml = "0.8"
unicode-security = "0.1"
unicode-normalization = "0.1"

# Dev dependencies
assert_cmd = "2"
predicates = "3"
