[package]
name = "ioguard-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unicode-security = { workspace = true }
unicode-normalization = { workspace = true }
icu_properties = "2"
icu_properties_data = "2"

[dev-dependencies]
