[package]
name = "ioguard-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C-ABI foreign function interface for ioguard"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ioguard-core = { path = "../ioguard-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
serde_json = { workspace = true }
